k8s/prod/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: reserve-train-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      project: reserve-train
      environment: prod
  template:
    metadata:
      labels:
        app: postgres
        project: reserve-train
        environment: prod
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: reserve-train-prod
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
