k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reserve-train
  namespace: reserve-train-prod
  labels:
    app: reserve-train
    project: reserve-train
    environment: prod
spec:
  selector:
    app: reserve-train
  ports:
  - port: 80
    targetPort: 8080
